test/sema/traits/trait_fn_not_implemented.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  // CHECK: [[# @LINE + 1]]:6: error: struct 'S' must implement function 'foo'
  fn foo();
}

struct S {
  impl A;
}

fn main() {
  S::foo();
}
